hero image changed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- custom css -->
 		<link rel="stylesheet" href="./dist/css/style.css" />
 
-		<title>Painter in London</title>
+		<title>Scaffolding</title>
 
 		<!-- Favicons
 	================================================== -->
@@ -75,8 +75,9 @@
 							<div class="row">
 								<div class="col-md-8">
 									<div class="heading ">
+										<small>Your one stop shop for</small>
 										<h1>
-											Need the pain taken out of  your next painting project?</h1>
+											Design and installation</h1>
 									</div>
 									<div class="hero-button">
 										<button type="button" class="btn button"  data-toggle="modal" data-target=".bd-example-modal-lg">
@@ -1550,9 +1551,9 @@
 			crossorigin="anonymous"
 		></script>
 		<!-- cookies code -->
-		<script type="text/javascript" id="cookieinfo"
+		<!-- <script type="text/javascript" id="cookieinfo"
         src="//cookieinfoscript.com/js/cookieinfo.min.js">
-    </script>
+    </script> -->
 		<script src="./dist/js/app.js"></script>
 	</body>
 </html>
