--- a/index.html
+++ b/index.html
@@ -404,13 +404,13 @@
 							<div class="about-content">
 								<h3 class="text-uppercase">
 									<small class="">WHO WE ARE </small> <br />
-									<span>Let us take the pain out of painting!</span>
+									<span>Let us take the pain out!</span>
 								</h3>
 								<p>
-									Painters London is using modern customer service and workmanship techniques to provide both the domestic and commercial sector with a great range of painting and decorating services!
+									Based in London ,  Scaffolding Ltd provides scaffolding services to the commercial and industrial sectors as well as residential properties throughout the UK.  We also undertake specialist rail and motorway contracts. 
 								</p>
-								<p>	Although we work in different areas in London we make sure each of our painters & decorators in London work in the area in which they live, to ensure a local feel and character to our service.</p>
-								<p>If you are fed up with decorators that turn up late, don't use dustsheets and have a radio blaring out all day long 	contact Painters London instead for a FREE, no obligation quotation.</p>
+								<p>Our core business is the supply and erection of scaffolding for all requirements, from small domestic projects to large commercial scaffolding design and installation work.</p>
+								<p>All our scaffolding work is tailored to suit your specific needs and comes at highly competitive prices.</p>
 								
 							</div>
 						</div>
