services image updated

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<a   class="nav-link scroll" href="#services" >Services</a>
 						</li>
 						<li class="nav-item">
-							<a   class="nav-link scroll" href="#rates" >Rates</a>
+							<a   class="nav-link scroll" href="#contact" >Contact</a>
 						</li>
 						<li class="nav-item">
 							<a  class="nav-link scroll" href="#areas" >Coverage</a>
@@ -410,7 +410,7 @@
 									Based in London ,  Scaffolding Ltd provides scaffolding services to the commercial and industrial sectors as well as residential properties throughout the UK.  We also undertake specialist rail and motorway contracts. Our core business is the supply and erection of scaffolding for all requirements, from small domestic projects to large commercial scaffolding design and installation work. All our scaffolding work is tailored to suit your specific needs and comes at highly competitive prices.
 								</p>
 								<h3 class="text-uppercase">
-									<small class="">WHY CHOOSE SCAFFOLDING? </small> 
+									<small class="">WHY CHOOSE US? </small> 
 								</h3>
 								<ul>
 									<li>We cover all areas of the UK</li>
@@ -436,7 +436,7 @@
 							<div class="row">
 									<div class="col-md-7">
 										<div class="ps-image-holder">
-											<img src="./dist/img/domestic-painting-image.jpg" class="img-fluid" alt="Service image">
+											<img src="./dist/img/scaffolding.jpg" class="img-fluid" alt="Service image">
 										</div>
 									</div>
 									<div class="col-md-5">
@@ -465,7 +465,7 @@
 							<div class="row ">
 									<div class="col-md-7">
 										<div class="ps-image-holder">
-											<img src="./dist/img/commercial-painting.jpg" class="img-fluid" alt="Service image">
+											<img src="./dist/img/scaffolding-installation.jpg" class="img-fluid" alt="Service image">
 										</div>
 									</div>
 									<div class="col-md-5">
@@ -518,14 +518,13 @@
 							<div class="row d-md-none">
 									<div class="col-md-7">
 										<div class="ps-image-holder">
-											<img src="./dist/img/exterior-painting.jpg" class="img-fluid" alt="Service image">
+											<img src="./dist/img/Safety_netting.jpg" class="img-fluid" alt="Service image">
 										</div>
 									</div>
 									<div class="col-md-5">
 										<div class="ps-content-holder">
 											<h3>Safety Netting</h3>
-												<p>We provide a progressive protection system that's necessary for the safe erection of elevation scaffolding.
-													We can carry out design, manufacturing and testing for our concertina netting system. The system is fitted at ground level and telescopes upwards above the working area to create a complete safe working zone separating the operatives and materials from the public and infrastructure. The netting forms one complete curtain for operatives to work behind from the ground level upwards.</p>
+												<p>We can carry out design, manufacturing and testing for our concertina netting system. The system is fitted at ground level and telescopes upwards above the working area to create a complete safe working zone separating the operatives and materials from the public and infrastructure.</p>
 												<p class="bold">Safety Through Design: </p>
 												 <p>We have designed our Specialist Safety Netting system over a three year period to eliminate risk for projects which otherwise would have been impossible to construct. Our safety system not only aims to eliminate all risk but offers huge cost savings to clients and main contractors through not having to price for night work and pay for any restrictions such as possessions.</p>
 											<button type="button" class="btn button"  data-toggle="modal" data-target=".bd-example-modal-lg">
@@ -539,8 +538,7 @@
 									<div class="col-md-5">
 										<div class="ps-content-holder">
 											<h3>Safety Netting</h3>
-												<p>We provide a progressive protection system that's necessary for the safe erection of elevation scaffolding.
-													We can carry out design, manufacturing and testing for our concertina netting system. The system is fitted at ground level and telescopes upwards above the working area to create a complete safe working zone separating the operatives and materials from the public and infrastructure. The netting forms one complete curtain for operatives to work behind from the ground level upwards.</p>
+											<p>We can carry out design, manufacturing and testing for our concertina netting system. The system is fitted at ground level and telescopes upwards above the working area to create a complete safe working zone separating the operatives and materials from the public and infrastructure.</p>
 												<p class="bold">Safety Through Design: </p>
 												 <p>We have designed our Specialist Safety Netting system over a three year period to eliminate risk for projects which otherwise would have been impossible to construct. Our safety system not only aims to eliminate all risk but offers huge cost savings to clients and main contractors through not having to price for night work and pay for any restrictions such as possessions.</p>
 											<button type="button" class="btn button"  data-toggle="modal" data-target=".bd-example-modal-lg">
@@ -550,7 +548,7 @@
 									</div>
 									<div class="col-md-7">
 										<div class="ps-image-holder">
-											<img src="./dist/img/exterior-painting.jpg" class="img-fluid" alt="Service image">
+											<img src="./dist/img/Safety_netting.jpg" class="img-fluid" alt="Service image">
 										</div>
 									</div>
 								</div>
@@ -559,7 +557,7 @@
 						<div class="row d-md-none">
 								<div class="col-md-7">
 									<div class="ps-image-holder">
-										<img src="./dist/img/commercial-painting.jpg" class="img-fluid" alt="Service image">
+										<img src="./dist/img/health-safety.jpg" class="img-fluid" alt="Service image">
 									</div>
 								</div>
 								<div class="col-md-5">
@@ -599,14 +597,14 @@
 									</div>
 									<div class="col-md-7">
 											<div class="ps-image-holder">
-												<img src="./dist/img/commercial-painting.jpg" class="img-fluid" alt="Service image">
+												<img src="./dist/img/health-safety.jpg" class="img-fluid" alt="Service image">
 											</div>
 										</div>
 								</div>
 				</div>
 				</div>
 			</section>
-			<section class="services" id="rates">
+			<section class="services d-none" id="rates">
 				<div class="container-md">
 					<div class="heading">
 						<h1>Pricing</h1>
@@ -785,7 +783,7 @@
           </h4>
         </div>
 			</section>
-			<section id="contact" class="contact scrollspy" >
+			<section class="contact" id="contact"  >
 				<div class="container-md">
 					<div class="row">
 						<div class="col">
@@ -892,7 +890,7 @@
 								</p>
 								<p>
 									<img src="./dist/img/envelope.png" alt="Contact phone number" />
-									<span>support@easy-car-recovery.co.uk</span>
+									<span>support@london-scaffolding.co.uk</span>
 								</p>
 								<p>
 									<img src="./dist/img/home.png" alt="Contact phone number" />
