--- a/index.html
+++ b/index.html
@@ -945,7 +945,9 @@
 												<div class="tab-pane fade show active" id="east" role="tabpanel" aria-labelledby="east-tab">
 														<div class="flex-container">
 																<ul class="flex-item">
-																		 <li> <a href="./aldgate-london-E1-UK.html">Aldgate</a>  </li>
+																		 <li> Aldgate
+																			 <!-- <a href="./aldgate-london-E1-UK.html">Aldgate</a>   -->
+																			</li>
 																		 <li > Barnsbury</li>
 																		 <!-- <li> <a href="./rates.html">Aldgate</a> </li>
 																		 <li onclick="change(event)"> <a id="ancor" href="./rates.html">Barnsbury</a> </li> -->
