safety logos added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- custom css -->
 		<link rel="stylesheet" href="./dist/css/style.css" />
 
-		<title>Scaffolding</title>
+		<title>Scaffolding London</title>
 
 		<!-- Favicons
 	================================================== -->
@@ -907,7 +907,43 @@
 				</div>
 			</section>
 			
-
+			<section class="safety-logos">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-6 col-md-4 col-lg-2">
+							<div class="sl-single text-center">
+								<img src="./dist/img/builder.jpg" class="img-fluid" alt="Scaffolding London Safety Logo">
+							</div>
+						</div>
+						
+						<div class="col-sm-6 col-md-4 col-lg-2">
+							<div class="sl-single text-center">
+								<img src="./dist/img/considerate.jpg" class="img-fluid" alt="Scaffolding London Safety Logo">
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-4 col-lg-2">
+							<div class="sl-single text-center">
+								<img src="./dist/img/safemark.jpg" class="img-fluid" alt="Scaffolding London Safety Logo">
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-4 col-lg-2">
+							<div class="sl-single text-center">
+								<img src="./dist/img/scafholding-association.jpg" class="img-fluid" alt="Scaffolding London Safety Logo">
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-4 col-lg-2">
+							<div class="sl-single text-center">
+								<img src="./dist/img/smas.jpg" class="img-fluid" alt="Scaffolding London Safety Logo">
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-4 col-lg-2">
+							<div class="sl-single text-center">
+								<img src="./dist/img/link-up.jpg" class="img-fluid" alt="Scaffolding London Safety Logo">
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 			<section id="areas" class="container-sm scrollspy" >
 				<div class=" area-cover">
 						<div class="heading">
