--- a/index.html
+++ b/index.html
@@ -1706,9 +1706,9 @@
 			crossorigin="anonymous"
 		></script>
 		<!-- cookies code -->
-		<!-- <script type="text/javascript" id="cookieinfo"
+		<script type="text/javascript" id="cookieinfo"
         src="//cookieinfoscript.com/js/cookieinfo.min.js">
-    </script> -->
+    </script>
 		<script src="./dist/js/app.js"></script>
 	</body>
 </html>
